@@ -1,4 +1,3 @@
-
 2021-01-22  Ron Norman <rjn@inglenet.com> 
 
 	* configure.ac: Some fixes to the previous changes
