@@ -1,3 +1,12 @@
+2021-02-04  James K. Lowden  <jklowden@symas.com>
+
+	* cobc.h cobc.c error.c pplex.l:
+	allocate cb_listing_file_struct statically.  All tests pass, some leaks.
+
+2021-02-01  James K. Lowden  <jklowden@symas.com>
+
+	* cobc.c (process_command_line): simplify cob_schema_dir initialization
+
 2021-01-29  James K. Lowden  <jklowden@symas.com>
 
 	* cobc.c: apply spatch/cast.spatch
